add Computer playing with X and O

--- a/6610505250_tic_tac_toe.ipynb
+++ b/6610505250_tic_tac_toe.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Hamtak0/Deeplearning/blob/main/6610505250_tic_tac_toe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Hamtak0/DeepLearning/blob/main/6610505250_tic_tac_toe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "JypPyC2jKj1Y"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -79,20 +79,20 @@
       "metadata": {
         "id": "S0jXNO4byzQU"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def init_empty():\n",
-        "    empty_cells = [' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ']\n",
+        "    empty_cells = [' ']*9\n",
         "    return empty_cells"
       ],
       "metadata": {
         "id": "KmHASFvZn5S8"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
       "metadata": {
         "id": "WH4ICnQLyzF1"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
       "metadata": {
         "id": "PyOrOUXkyy4v"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -189,7 +189,7 @@
       "metadata": {
         "id": "7_koE4rOyllO"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
       "metadata": {
         "id": "S_zSS3YdmBzO"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -220,7 +220,7 @@
       "metadata": {
         "id": "eBokLsFMkaeK"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -243,9 +243,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5dd9ee18-e705-4894-dc17-af55ad47e1b2"
+        "outputId": "203c2159-b9ee-46f7-9425-ac45ca0aad44",
+        "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,9 +272,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0580f971-2d53-4064-f967-ae4bb63611f6"
+        "outputId": "c23dfb1d-8fe9-4b7d-99ff-2b2f96f46a7e",
+        "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,9 +314,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
-        "outputId": "4f9948ef-cf77-4762-d617-fe04c5718cbf"
+        "outputId": "435d0fc6-9457-499f-d6f6-d03e4fb755a8"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,25 +341,26 @@
       "metadata": {
         "id": "-wyI---W3czh",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 351
         },
         "collapsed": true,
-        "outputId": "877edace-c0e8-4175-9389-d265721793f6"
+        "outputId": "6c9ba789-bb13-45bc-db50-89672497da9d"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Which cell do you want to place your X in? (0-8): 2\n",
-            "Cannot make that move. Try again\n",
-            "Which cell do you want to place your X in? (0-8): 1\n",
-            " | | \n",
-            "-+-+-\n",
-            " | |O\n",
-            "-+-+-\n",
-            " |X|X\n"
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "Interrupted by user",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-32-4155782338.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mboard_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'X'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'O'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mempty_cells\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_empty_cells\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mboard_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mhuman_move\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mboard_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mdraw_board\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mboard_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-24-3110300527.py\u001b[0m in \u001b[0;36mhuman_move\u001b[0;34m(board_state)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mhuman_move\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mboard_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mmy_move\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Which cell do you want to place your X in? (0-8): \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mmy_move\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_move\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mempty_cell_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_empty_cells\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mboard_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             )\n\u001b[0;32m-> 1177\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
           ]
         }
       ]
@@ -376,19 +379,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
-        "outputId": "673240d0-8f53-4eaf-ee7a-52454970e6f0"
+        "outputId": "8c2ecf64-da73-48bc-d11d-054f2e62a6b2"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "O| | \n",
+            " | |O\n",
             "-+-+-\n",
             " | |O\n",
             "-+-+-\n",
-            " |X|X\n"
+            " | |X\n"
           ]
         }
       ]
@@ -431,9 +434,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
-        "outputId": "d613385d-beb1-40ef-aa2c-9499e136233c"
+        "outputId": "26da7f7f-395f-44f5-fecd-d98873d62118"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,53 +472,11 @@
         "    draw_board(board_state)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "collapsed": true,
-        "id": "QYKE6r4MjaiK",
-        "outputId": "60e61b46-ff25-448b-dc9b-44a0417576f9"
+        "id": "QYKE6r4MjaiK"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Which cell do you want to place your X in? (0-8): 0\n",
-            " | | \n",
-            "-+-+-\n",
-            " | | \n",
-            "-+-+-\n",
-            "X| | \n",
-            "\n",
-            " |O| \n",
-            "-+-+-\n",
-            " | | \n",
-            "-+-+-\n",
-            "X| | \n",
-            "Which cell do you want to place your X in? (0-8): 1\n",
-            " |O| \n",
-            "-+-+-\n",
-            " | | \n",
-            "-+-+-\n",
-            "X|X| \n",
-            "\n",
-            "O|O| \n",
-            "-+-+-\n",
-            " | | \n",
-            "-+-+-\n",
-            "X|X| \n",
-            "Which cell do you want to place your X in? (0-8): 2\n",
-            "O|O| \n",
-            "-+-+-\n",
-            " | | \n",
-            "-+-+-\n",
-            "X|X|X\n",
-            "\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -528,9 +489,186 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "def whowin(board_state) -> int:\n",
+        "    winning = [\n",
+        "        # Horizontal\n",
+        "        (0, 1, 2), (3, 4, 5), (6, 7, 8),\n",
+        "        # Vertical\n",
+        "        (0, 3, 6), (1, 4, 7), (2, 5, 8),\n",
+        "        # Diagonal\n",
+        "        (0, 4, 8), (2, 4, 6)\n",
+        "    ]\n",
+        "    for a, b, c in winning:\n",
+        "        if board_state[a] == board_state[b] == board_state[c] == 'X':\n",
+        "            return 1\n",
+        "        elif board_state[a] == board_state[b] == board_state[c] == 'O':\n",
+        "            return -1\n",
+        "    return 0\n",
+        "\n",
+        "def result(board_state, action, sel):\n",
+        "    new_board_state = board_state.copy()\n",
+        "    new_board_state[action] = 'X' if sel else 'O'\n",
+        "    return new_board_state"
+      ],
+      "metadata": {
+        "id": "wQLPDy9b86cy"
+      },
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def maxvalue(board_state):\n",
+        "    if terminate(board_state):\n",
+        "        return whowin(board_state)\n",
+        "    v = -2147483648\n",
+        "    for action in get_empty_cells(board_state):\n",
+        "        v = max(v, minvalue(result(board_state, action, 1)))\n",
+        "    return v\n",
+        "\n",
+        "def minvalue(board_state):\n",
+        "    if terminate(board_state):\n",
+        "        return whowin(board_state)\n",
+        "    v = 2147483647\n",
+        "    for action in get_empty_cells(board_state):\n",
+        "        v = min(v, maxvalue(result(board_state, action, 0)))\n",
+        "    return v"
+      ],
+      "metadata": {
+        "id": "bYx2Kuyi-WfL"
+      },
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def computer_move_O(board_state):\n",
+        "    best_move = -1\n",
+        "    best_score = 2147483647\n",
+        "    for action in get_empty_cells(board_state):\n",
+        "        new_score = maxvalue(result(board_state, action, 0))\n",
+        "        if new_score < best_score:\n",
+        "            best_score = new_score\n",
+        "            best_move = action\n",
+        "    board_state[best_move] = 'O'"
+      ],
+      "metadata": {
+        "id": "XnXc-FNJQnMx"
+      },
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "board_state = init_empty()\n",
+        "while not terminate(board_state):\n",
+        "    human_move(board_state)\n",
+        "    draw_board(board_state)\n",
+        "    print()\n",
+        "    if terminate(board_state):\n",
+        "        break\n",
+        "    computer_move_O(board_state)\n",
+        "    draw_board(board_state)\n",
+        "\n",
+        "based = whowin(board_state)\n",
+        "if based == 1: print(\"Player WIN!!\")\n",
+        "elif based == -1: print(\"Computer WIN!!\")\n",
+        "else: print(\"Draw ._.\")"
+      ],
+      "metadata": {
+        "id": "92ihK6axR7DZ",
+        "outputId": "ee97217e-a270-477d-c49d-789365997426",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Which cell do you want to place your X in? (0-8): 8\n",
+            " | |X\n",
+            "-+-+-\n",
+            " | | \n",
+            "-+-+-\n",
+            " | | \n",
+            "\n",
+            " | |X\n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            " | | \n",
+            "Which cell do you want to place your X in? (0-8): 7\n",
+            " |X|X\n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            " | | \n",
+            "\n",
+            "O|X|X\n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            " | | \n",
+            "Which cell do you want to place your X in? (0-8): 1\n",
+            "O|X|X\n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            " |X| \n",
+            "\n",
+            "O|X|X\n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "O|X| \n",
+            "Which cell do you want to place your X in? (0-8): 2\n",
+            "O|X|X\n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "O|X|X\n",
+            "\n",
+            "O|X|X\n",
+            "-+-+-\n",
+            "O|O| \n",
+            "-+-+-\n",
+            "O|X|X\n",
+            "Computer WIN!!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def computer_move_X(board_state):\n",
+        "    best_move = -1\n",
+        "    best_score = -2147483648\n",
+        "    for action in get_empty_cells(board_state):\n",
+        "        new_score = minvalue(result(board_state, action, 1))\n",
+        "        if new_score > best_score:\n",
+        "            best_score = new_score\n",
+        "            best_move = action\n",
+        "    board_state[best_move] = 'X'"
+      ],
+      "metadata": {
+        "id": "ngcxnWLhfoBJ"
+      },
+      "execution_count": 79,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "_TUdGskytAzZ"
+        "id": "ZCCFug3dfuqx"
       },
       "execution_count": null,
       "outputs": []
