Addition on bots (play a full possible tic-tac-toe)

--- a/6610505250_tic_tac_toe.ipynb
+++ b/6610505250_tic_tac_toe.ipynb
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "JypPyC2jKj1Y"
       },
-      "execution_count": 105,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
       "metadata": {
         "id": "S0jXNO4byzQU"
       },
-      "execution_count": 106,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "KmHASFvZn5S8"
       },
-      "execution_count": 107,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
       "metadata": {
         "id": "WH4ICnQLyzF1"
       },
-      "execution_count": 108,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
       "metadata": {
         "id": "PyOrOUXkyy4v"
       },
-      "execution_count": 109,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -189,7 +189,7 @@
       "metadata": {
         "id": "7_koE4rOyllO"
       },
-      "execution_count": 110,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
       "metadata": {
         "id": "S_zSS3YdmBzO"
       },
-      "execution_count": 111,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -220,7 +220,7 @@
       "metadata": {
         "id": "eBokLsFMkaeK"
       },
-      "execution_count": 112,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
       "metadata": {
         "id": "yPOXLMujgYW5"
       },
-      "execution_count": 113,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -261,7 +261,7 @@
         "outputId": "c79763c3-bb9b-4d6f-9d51-e3d73b6ff5c3",
         "collapsed": true
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +290,7 @@
         "outputId": "e931578e-c2b6-48e1-d146-b1eb9d4c59da",
         "collapsed": true
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,7 +331,7 @@
         "collapsed": true,
         "outputId": "03b8f284-054a-496e-b2d1-bf0dd07549d0"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,7 +361,7 @@
         "collapsed": true,
         "outputId": "d490a712-eea8-4c7e-e427-8113649b359e"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,7 +393,7 @@
         "collapsed": true,
         "outputId": "40acdbe2-bfd7-4fb5-da91-67a7610a8997"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,7 +448,7 @@
         "collapsed": true,
         "outputId": "248bcb5b-c7c4-49aa-ec54-fa5024f3ca0e"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,7 +492,7 @@
         "id": "QYKE6r4MjaiK",
         "outputId": "ec2382c9-e6b2-4cae-bb4d-85dd6aa2e5a1"
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,7 +570,7 @@
       "metadata": {
         "id": "wQLPDy9b86cy"
       },
-      "execution_count": 121,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -595,7 +595,7 @@
       "metadata": {
         "id": "bYx2Kuyi-WfL"
       },
-      "execution_count": 122,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -614,7 +614,7 @@
       "metadata": {
         "id": "XnXc-FNJQnMx"
       },
-      "execution_count": 123,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -638,7 +638,7 @@
         "id": "92ihK6axR7DZ",
         "outputId": "46fc04c5-a4b8-44e6-9d5d-397f2c0090f8"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,7 +729,7 @@
       "metadata": {
         "id": "ngcxnWLhfoBJ"
       },
-      "execution_count": 125,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -749,12 +749,12 @@
       ],
       "metadata": {
         "id": "dWnA_9V7gF0p",
-        "outputId": "5740f2f3-3252-4c99-a083-60c8677ad445",
+        "outputId": "9ac856ef-bbec-4d4a-af17-923041a23029",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 126,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -815,6 +815,495 @@
             "X|X|O\n",
             "\n",
             "Draw ._.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Show all possible bot X move**"
+      ],
+      "metadata": {
+        "id": "OvfMNSFGkHhY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "count = 0\n",
+        "for i in range(9):\n",
+        "    board_state = init_empty()\n",
+        "    board_state[i] = 'X'\n",
+        "    while not terminate(board_state):\n",
+        "        computer_move_O(board_state)\n",
+        "        draw_board(board_state)\n",
+        "        print()\n",
+        "        if terminate(board_state):\n",
+        "            break\n",
+        "        computer_move_X(board_state)\n",
+        "        draw_board(board_state)\n",
+        "        print()\n",
+        "    if whowin(board_state) == 0:\n",
+        "        count += 1\n",
+        "    summary(board_state)\n",
+        "print(count)"
+      ],
+      "metadata": {
+        "outputId": "b5310e4f-a181-4770-90f6-f890bb3eca27",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P0PR2oepi_fP"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " | | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X| | \n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|X| \n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "X| | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "X| | \n",
+            "-+-+-\n",
+            "O|O| \n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "X| | \n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "X|O| \n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "X|O|X\n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "Draw ._.\n",
+            " | | \n",
+            "-+-+-\n",
+            " | | \n",
+            "-+-+-\n",
+            "O|X| \n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            "X| | \n",
+            "-+-+-\n",
+            "O|X| \n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            "X|O| \n",
+            "-+-+-\n",
+            "O|X| \n",
+            "\n",
+            " | |X\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "-+-+-\n",
+            "O|X| \n",
+            "\n",
+            " | |X\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "-+-+-\n",
+            "O|X|O\n",
+            "\n",
+            "X| |X\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "-+-+-\n",
+            "O|X|O\n",
+            "\n",
+            "X|O|X\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "-+-+-\n",
+            "O|X|O\n",
+            "\n",
+            "X|O|X\n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "-+-+-\n",
+            "O|X|O\n",
+            "\n",
+            "Draw ._.\n",
+            " | | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            " | |X\n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X| |X\n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            " |X| \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            " |X| \n",
+            "-+-+-\n",
+            "O|O| \n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            " |X| \n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            " |X|O\n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            "X|X|O\n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            "Draw ._.\n",
+            " | | \n",
+            "-+-+-\n",
+            "X| | \n",
+            "-+-+-\n",
+            "O| | \n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            "X| | \n",
+            "-+-+-\n",
+            "O|X| \n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            "X|O| \n",
+            "-+-+-\n",
+            "O|X| \n",
+            "\n",
+            " | |X\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "-+-+-\n",
+            "O|X| \n",
+            "\n",
+            " | |X\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "-+-+-\n",
+            "O|X|O\n",
+            "\n",
+            "X| |X\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "-+-+-\n",
+            "O|X|O\n",
+            "\n",
+            "X|O|X\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "-+-+-\n",
+            "O|X|O\n",
+            "\n",
+            "X|O|X\n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "-+-+-\n",
+            "O|X|O\n",
+            "\n",
+            "Draw ._.\n",
+            " | | \n",
+            "-+-+-\n",
+            " |X| \n",
+            "-+-+-\n",
+            "O| | \n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            " |X| \n",
+            "-+-+-\n",
+            "O|X| \n",
+            "\n",
+            " |O| \n",
+            "-+-+-\n",
+            " |X| \n",
+            "-+-+-\n",
+            "O|X| \n",
+            "\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|X| \n",
+            "-+-+-\n",
+            "O|X| \n",
+            "\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "-+-+-\n",
+            "O|X| \n",
+            "\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "-+-+-\n",
+            "O|X|X\n",
+            "\n",
+            "O|O| \n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "-+-+-\n",
+            "O|X|X\n",
+            "\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "-+-+-\n",
+            "O|X|X\n",
+            "\n",
+            "Draw ._.\n",
+            " | | \n",
+            "-+-+-\n",
+            " | |X\n",
+            "-+-+-\n",
+            " | |O\n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            " | |X\n",
+            "-+-+-\n",
+            "X| |O\n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            "O| |X\n",
+            "-+-+-\n",
+            "X| |O\n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            "O| |X\n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "X| | \n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "X|O| \n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "X|O|X\n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "Draw ._.\n",
+            "X| | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            " | | \n",
+            "\n",
+            "X| | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X| | \n",
+            "\n",
+            "X| | \n",
+            "-+-+-\n",
+            "O|O| \n",
+            "-+-+-\n",
+            "X| | \n",
+            "\n",
+            "X| | \n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X| | \n",
+            "\n",
+            "X| | \n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "\n",
+            "X|X| \n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "\n",
+            "X|X|O\n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "\n",
+            "X|X|O\n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            "Draw ._.\n",
+            " |X| \n",
+            "-+-+-\n",
+            " | | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "\n",
+            " |X| \n",
+            "-+-+-\n",
+            " | | \n",
+            "-+-+-\n",
+            "X|O| \n",
+            "\n",
+            "O|X| \n",
+            "-+-+-\n",
+            " | | \n",
+            "-+-+-\n",
+            "X|O| \n",
+            "\n",
+            "O|X| \n",
+            "-+-+-\n",
+            " | | \n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            "O|X| \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            "O|X| \n",
+            "-+-+-\n",
+            "X|O| \n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            "O|X| \n",
+            "-+-+-\n",
+            "X|O|O\n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            "O|X|X\n",
+            "-+-+-\n",
+            "X|O|O\n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            "Draw ._.\n",
+            " | |X\n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            " | | \n",
+            "\n",
+            " | |X\n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X| | \n",
+            "\n",
+            " | |X\n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|O| \n",
+            "\n",
+            " |X|X\n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|O| \n",
+            "\n",
+            "O|X|X\n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|O| \n",
+            "\n",
+            "O|X|X\n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            "O|X|X\n",
+            "-+-+-\n",
+            " |O|O\n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            "O|X|X\n",
+            "-+-+-\n",
+            "X|O|O\n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            "Draw ._.\n",
+            "9\n"
           ]
         }
       ]
