feat: initialize yoda

--- a/LLM_Finetuning.ipynb
+++ b/LLM_Finetuning.ipynb
@@ -979,7 +979,7 @@
         "    lora_model = get_peft_model(model, lora_config)\n",
         "    return lora_model\n",
         "\n",
-        "model = apply_lora(model)\n",
+        "lora_model = apply_lora(model)\n",
         "\n",
         "# Print the number of trainable parameters after applying LoRA\n",
         "trainable_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
@@ -1070,7 +1070,7 @@
         "    losses = []\n",
         "\n",
         "    # Apply LoRA to the model\n",
-        "    # model = apply_lora(model) # TODO\n",
+        "    model = apply_lora(model) # TODO\n",
         "\n",
         "    optimizer = Lion(model.parameters(), lr=learning_rate)\n",
         "\n",
@@ -1248,7 +1248,7 @@
       "source": [
         "# Load the Yoda-speak dataset and fine-tune the model using your training function\n",
         "train_loader, test_loader = mdl.lab3.create_dataloader(style=\"yoda\")\n",
-        "model = train('''TODO''') # TODO"
+        "model = train(model, train_loader, tokenizer, max_steps=50) # TODO"
       ]
     },
     {
